<resources>
    <string name="app_name">GalleryView</string>
    <string name="pictures">Pictures</string>
    <string name="albums">Albums</string>
    <string name="stories">Stories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="select_all">Select all</string>
    <string name="create">Create</string>
    <string name="start_ss">Start slide show</string>
    <string name="_00_00">00:00</string>
    <string name="thumb_image_desc">thumbItem</string>
    <string name="create_group">Create group</string>
    <string name="hide_or_unhide">Hide or unhide album</string>
    <string name="camera">Camera</string>
    <string name="_195">195</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="group">Group</string>
    <string name="create_album">Create album</string>
    <string name="create_story">Create story</string>
</resources>