<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_album"
        android:title="@string/create_album"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_group"
        android:title="@string/create_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/hide_album"
        android:title="@string/hide_or_unhide"
        app:showAsAction="never" />
</menu>